--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ header h1{
     text-shadow: 5px 5px 5px blueviolet;
 
 }
-h2{
+h2,h4{
     font-size: 2rem;
     text-shadow: 5px 5px 5px blueviolet;
     /* text-align: center; */
